--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   })(window,document,'script','dataLayer','GTM-5DDXSMR');</script>
   <!-- End Google Tag Manager -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/images/weblogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Way to Forma</title>
   </head>
